fix inconsistency, broken logo, icon svg filter, spacing

--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -4,33 +4,31 @@
   border-right: 0.5px solid var(--text-variant);
   background-color: var(--surface);
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
-  padding-top: 6px;
-  padding-bottom: 20px;
-  height: 60px;
+  height: 90px;
+  width: fit-content;
   margin-block: 10px;
-}
-
-.logo img {
-  height: inherit;
+  align-self: center;
 }
 
 .menu {
-  padding-inline: 5%;
-  justify-content: space-between;
+  padding-inline: 8%;
+  flex: 1;
 }
 
 .menu-selection {
   background-color: var(--surface);
   color: var(--text);
   border-radius: 8px;
-  padding-block: 8px;
+  padding-block: 6px;
   display: flex;
   justify-content: start;
   align-items: center;
-  margin-bottom: 38px;
+  margin-bottom: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -45,14 +43,25 @@
     brightness(108%) contrast(107%);
 }
 
-.menu-selection:hover {
-  background-color: var(--primary);
-  color: var(--surface);
+body.dark .menu-selection .icon,
+body.dark .menu-selection.selected .icon,
+body.dark .menu-selection:hover .icon {
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(150deg)
+    brightness(109%) contrast(100%);
 }
 
 .menu-selection:hover .icon {
   filter: invert(93%) sepia(81%) saturate(4725%) hue-rotate(180deg)
     brightness(108%) contrast(107%);
+}
+
+.menu-selection:hover {
+  background-color: var(--primary);
+  color: var(--surface);
+}
+
+body.dark .menu-selection:hover {
+  color: var(--text);
 }
 
 .menu-selection .icon {
@@ -67,6 +76,10 @@
   font-family: var(--heading);
   font-size: 15px;
   font-weight: 600;
+}
+
+body.dark .menu-selection .label {
+  color: var(--text);
 }
 
 .menu-selection.selected .label {
@@ -94,22 +107,26 @@
   .menu {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    padding-top: 2rem;
   }
 
   .logo {
-    max-width: 30px;
+    max-width: 40px;
+    max-height: 40px;
+    aspect-ratio: 1;
     content: url("/TLK.svg");
-    margin: 0;
+    margin-block: 2rem;
     padding: 0;
+  }
+
+  body.dark .logo {
+    content: url("/TLK_REVERSE.svg");
   }
 }
 
 @media screen and (max-width: 768px) {
   .menu-selection .icon {
-    padding: 5px;
+    padding: 6px;
     max-width: 20px;
   }
 }
